[workspace]
resolver = "2"
members = [
  "module/*",
]

exclude = [
  "-*",
]

[workspace.metadata]
project_name = "test_sys"
# url to project_repositiry
repo_url = "https://github.com/SRetip/test_sys"
# branches (includes master branch)
branches = [ "master", "alpha" ]

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "deny"
future_incompatible = "deny"

[workspace.lints.clippy]
restriction = "deny" # opt out where this is redundant
pedantic = "deny" # opt out where this is redundant
